--- a/WPFStyleLibrary/WPFStyleLibrary/WidgetStyleLibrary.xaml
+++ b/WPFStyleLibrary/WPFStyleLibrary/WidgetStyleLibrary.xaml
@@ -308,6 +308,19 @@
         <Setter Property="TextWrapping"
                 Value="Wrap"></Setter>
     </Style>
+    <Style x:Key="TextBlock_Title"
+           TargetType="TextBlock">
+        <Setter Property="FontFamily"
+                Value="Microsoft YaHei"></Setter>
+        <Setter Property="FontSize"
+                Value="22"></Setter>
+        <Setter Property="HorizontalAlignment"
+                Value="Center"></Setter>
+        <Setter Property="VerticalAlignment"
+                Value="Center"></Setter>
+        <Setter Property="TextWrapping"
+                Value="Wrap"></Setter>
+    </Style>
     <Style x:Key="TextBlock_Strong"
            TargetType="TextBlock"
            BasedOn="{StaticResource TextBlock_Basic}">
@@ -657,7 +670,76 @@
             </MultiTrigger>
         </Style.Triggers>
     </Style>
-    
+    <Style x:Key="ListBox_Baisc"
+           TargetType="{x:Type ListBox}">
+        <Setter Property="FontFamily"
+                Value="Microsoft YaHei"></Setter>
+        <Setter Property="FontSize"
+                Value="16"></Setter>
+        <Setter Property="Background"
+                Value="{StaticResource Color_Background}"></Setter>
+        <Setter Property="BorderBrush"
+                Value="{StaticResource Color_Border}" />
+        <Setter Property="Background"
+                Value="{StaticResource Color_Background}" />
+        <Setter Property="BorderBrush"
+                Value="{StaticResource Color_Border}" />
+        <Setter Property="BorderThickness"
+                Value="1" />
+        <Setter Property="Foreground"
+                Value="{StaticResource Color_Text}" />
+        <Setter Property="ScrollViewer.HorizontalScrollBarVisibility"
+                Value="Auto" />
+        <Setter Property="ScrollViewer.VerticalScrollBarVisibility"
+                Value="Auto" />
+        <Setter Property="ScrollViewer.CanContentScroll"
+                Value="true" />
+        <Setter Property="ScrollViewer.PanningMode"
+                Value="Both" />
+        <Setter Property="Stylus.IsFlicksEnabled"
+                Value="False" />
+        <Setter Property="VerticalContentAlignment"
+                Value="Center" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ListBox}">
+                    <Border x:Name="Bd"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            Background="{TemplateBinding Background}"
+                            Padding="1"
+                            SnapsToDevicePixels="true">
+                        <ScrollViewer Focusable="false"
+                                      Padding="{TemplateBinding Padding}">
+                            <ItemsPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                        </ScrollViewer>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsEnabled"
+                                 Value="false">
+                            <Setter Property="Background"
+                                    TargetName="Bd"
+                                    Value="{StaticResource Color_Background_Unable}" />
+                            <Setter Property="BorderBrush"
+                                    TargetName="Bd"
+                                    Value="{StaticResource Color_Border_Unable}" />
+                        </Trigger>
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="IsGrouping"
+                                           Value="true" />
+                                <Condition Property="VirtualizingPanel.IsVirtualizingWhenGrouping"
+                                           Value="false" />
+                            </MultiTrigger.Conditions>
+                            <Setter Property="ScrollViewer.CanContentScroll"
+                                    Value="false" />
+                        </MultiTrigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
 
 
 
